# pathfinder-rag

./: .gitignore  LICENSE  LICENSE-OGL.txt  LICENSE-THIRD-PARTY-SOURCES.txt  LICENSE-THIRD-PARTY.md  README.md  todo.txt
rag/: .dockerignore  .gitignore  pyproject.toml
rag/eval/: queries.jsonl
rag/scripts/: prototype_cli.py  qwen_embed_test.py
rag/src/rag/: chunking.py  cli.py  config.py  corpus.py  embedding.py  evaluation.py  genai_client.py  models.py  parsing.py  retrieval.py
rag/tests/: test_chunking.py  test_cli.py  test_corpus.py  test_embedding.py  test_evaluation.py  test_parsing.py  test_retrieval.py
rag/tests/fixtures/HTML/: alignment-description__additional-rules.html  basics-ability-scores__glossary.html  bestiary__monster-listings__dragons__dragon__chromatic-red__adult-red-dragon.html  classes__core-classes__druid__animal-companions.html  classes__unchained-classes__rogue-unchained.html  equipment__weapons__weapon-descriptions__dagger.html  feats.html  feats__combat-feats__greater-two-weapon-fighting-combat.html  gamemastering__combat.html  magic-items__rods__rod-of-wonder.html  magic__all-spells__f__fireball.html  magic__spell-lists-and-domains__spell-lists-sorcerer-and-wizard.html  races__other-races__featured-races__arg-kobold.html  skills__stealth.html  traits__race-traits__firebug-kobold-red-scaled.html
rag/tests/fixtures/goldens/: alignment-description__additional-rules.golden.md  basics-ability-scores__glossary.golden.md  classes__unchained-classes__rogue-unchained.golden.md  (+12 more)
scraper/: .env.example  .gitignore  discover_urls.py  pyproject.toml  scraper_tests.ipynb  scrapy.cfg  url_discovery.ipynb
scraper/pathfinder_scraper/: pipelines.py  settings.py
scraper/pathfinder_scraper/spiders/: d20pfsrd.py
(+1 files in other folders)
