[project]
name = "rag"
version = "0.1.0"
description = "RAG pipeline for Pathfinder 1e rules. parsing, embedding, retrieval, and eval"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "typer>=0.26.8",
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ['src/rag']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ['E', 'F', 'I', 'B', 'A', 'UP', 'SIM', 'RUF']

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
testpaths = ['tests']

[project.scripts]
rag-cli = 'rag.cli:app'
