[project]
name = "scraper"
version = "0.1.0"
description = "Scrapy crawler that downloads Pathfinder 1e rules pages from d20pfsrd.com"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scrapy>=2.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "nbstripout>=0.9.1",
    "requests>=2.32.0",
    "requests-cache>=1.3.3",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 120
# notebooks are exploration history not production code. don't lint
extend-exclude = ['*.ipynb']

[tool.ruff.lint]
select = ['E', 'F', 'I', 'B', 'A', 'UP', 'SIM', 'RUF']

[tool.ruff.format]
quote-style = 'single'
